2014-05-04:
	Dhananjay Balan:
		* Salt minion installation & configuration plugin
		* Expose debootstrap --include-packages and --exclude-packages options to manifest
2014-05-03:
	Anders Ingemann:
		* Require hostname setting for vagrant plugin
		* Fixes #14: S3 images can now be bootstrapped outside EC2.
		* Added enable_agent option to puppet plugin
2014-05-02:
	Tomasz Rybak:
		* Added Google Compute Engine Provider