@@ -1,0 +1,30 @@
+{
+	"$schema": "http://json-schema.org/draft-04/schema#",
+	"title": "Pip install plugin manifest",
+	"type": "object",
+	"properties": {
+		"plugins": {
+			"type": "object",
+			"properties": {
+				"pip_install": {
+					"type": "object",
+					"properties": {
+						"packages": { "$ref": "#/definitions/packages" }
+					},
+					"minProperties": 1,
+					"additionalProperties": false
+				}
+			}
+		}
+	},
+	"definitions": {
+		"packages": {
+			"type":    "array",
+			"items": {
+				"type": "string"
+			},
+			"minItems": 1,
+			"uniqueItems": true
+		}
+	}
+}
